# random_unnamed_chess_game

./: .gitignore  Cargo.toml  readme.md
assets/fonts/: note.txt
src/: main.rs
src/api/: chessmove.rs  chessstate.rs  mod.rs
src/client/: mod.rs
src/client/game/: chess_pieces.rs  gameplay.rs  mod.rs  ui.rs
src/client/loading/: mod.rs
src/client/main_menu/: mod.rs
src/client/networking/: mod.rs
src/server/: mod.rs
