[package]
name = "online_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_slinet = { version = "0.7.0", features = ["protocol_tcp", "server", "client", "bincode", "serializer_bincode"] }
copypasta = { version = "0.10.0", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.164", features = ["derive"] }

[features]
default = ["client", "server"]
server = ["dep:rand"]
client = ["dep:copypasta"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
